--- a/currency-converter-angular/angular.json
+++ b/currency-converter-angular/angular.json
@@ -103,7 +103,8 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.sass"
+              "src/styles.sass",
+              "node_modules/ngx-flag-icon-css/scss/flag-icon"
             ],
             "scripts": []
           }
